[tool.poetry]
name = "chat-clone"
version = "0.1.0"
description = ""
authors = ["onion27 <ude0721juji@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
langchain = "^0.0.352"
openai = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
